--- a/Those other things/index.html
+++ b/Those other things/index.html
@@ -1,5 +1,5 @@
-<p>&lt;!DOCTYPE html></p>
-<p><html></p>
+<html>
+
 <p><head></p>
 <pre><code>  &lt;title&gt;HTML Hyperlinks&lt;/title&gt;
 </code></pre>
