--- a/Those other things/index.html
+++ b/Those other things/index.html
@@ -1,19 +1,1 @@
-<html>
-
-<p><head></p>
-<pre><code>  &lt;title&gt;HTML Hyperlinks&lt;/title&gt;
-</code></pre>
-<p></head></p>
-<p><body></p>
-<pre><code>  &lt;h1&gt;Company&lt;/h1&gt;
-
-  &lt;p&gt;
-
-    &lt;a href="https://odu-dlprod.webex.com/odu-dlprod/j.php?MTID=m55f57b4f92f5ec7b66372ffb7d93bbbc"&gt;The main room&lt;/a&gt;
-
-   &lt;a href="https://oduonline.webex.com/ oduonline/j.php?MTID= md7bc2228b052fff7ee58f32f7152c f4d"&gt;The ELV meating room&lt;/a&gt;
-
-  &lt;/p&gt;
-</code></pre>
-<p></body></p>
-<p></html></p>
+<html><body>a href="https://odu-dlprod.webex.com/odu-dlprod/j.php?MTID=m55f57b4f92f5ec7b66372ffb7d93bbbc">The main room</a>         <a href="https://oduonline.webex.com/ oduonline/j.php?MTID= md7bc2228b052fff7ee58f32f7152c f4d">The ELV meating room</a</body></html>
